# toggldesktop

./: .gitignore  CMakeLists.txt  Makefile  azure-pipelines.yml  snap
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  pr_tagger.yml  release.yml  release_dev_build.yaml
next/: CMakeLists.txt  context.cpp  context.h  credentials.h  eventqueue.cpp  eventqueue.h  httpclient.cpp  httpclient.h  legacy_api.cc  legacy_api.h  legacy_api_tools.cc  legacy_api_tools.h  main.cc  settings.cpp  settings.h  togglapi.cpp  togglapi.h  userdata.cpp  userdata.h
next/db/: database.cc  database.h  migrations.cc  migrations.h  model_change.h
next/entity/: user.h
next/legacy/: toggl_api.cc  toggl_api.h  toggl_api_callbacks.cc  toggl_api_callbacks.h  toggl_api_callbacks_private.cc  toggl_api_callbacks_private.h  toggl_api_settings.cc  toggl_api_settings.h  toggl_api_tools.cc  toggl_api_tools.h  toggl_api_types.h
next/misc/: const.h  error.cc  error.cpp  error.h  formatter.cc  formatter.h  logger.h  memory.cpp  memory.h  string_tools.h  types.h
next/model/: autotracker.cc  autotracker.h  base_model.cc  base_model.h  batch_update_result.cc  batch_update_result.h  client.cc  client.h  country.cc  country.h  project.cc  project.h  settings.cc  settings.h  tag.cc  tag.h  task.cc  task.h  time_entry.cc  time_entry.h  timeline_event.cc  timeline_event.h  user.cc  user.h  workspace.cc  workspace.h
next/net/: proxy.h
next/test/: CMakeLists.txt  memory_test.cc
snap/: snapcraft.yaml
src/lib/osx/TogglDesktopLibrary.xcodeproj/: project.pbxproj
src/ui/linux/: com.toggl.Button.json  toggldesktop.appdata.xml  toggldesktop.desktop
src/ui/linux/TogglDesktop/: CMakeLists.txt  TogglDesktop.pro  autocompletecellwidget.cpp  autocompletecellwidget.h  autocompletecombobox.cpp  autocompletecombobox.h  autocompletedropdownlist.cpp  autocompletedropdownlist.h  autocompleteitemdelegate.cpp  autocompleteitemdelegate.h  autocompletelistmodel.cpp  autocompletelistmodel.h  autocompleteview.h  countryview.h  genericview.h  loginwidget.cpp  loginwidget.ui  main.cpp  settingsview.h  timeentryeditorwidget.cpp  timeentryeditorwidget.h  timeentryview.h  timerwidget.cpp  timerwidget.h  toggl.cpp  toggl.h
src/ui/osx/TogglDesktop/TogglDesktop.xcodeproj/: project.pbxproj
src/ui/windows/TogglDesktop/TogglDesktop/ui/views/: Timer.xaml  Timer.xaml.cs
src/ui/windows/TogglDesktop/TogglDesktop/ui/windows/: MainWindow.xaml.cs
